--- a/index.html
+++ b/index.html
@@ -6,11 +6,13 @@
     <title>SVG a PBI</title>
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" rel="stylesheet">
     <style>
+        /* General Styles */
         body {
             font-family: 'Poppins', sans-serif;
             margin: 0;
             padding: 0;
             display: flex;
+            flex-direction: column;
             justify-content: center;
             align-items: center;
             min-height: 100vh;
@@ -21,39 +23,52 @@
         .container {
             background: #ffffff;
             color: #333;
-            padding: 20px;
+            padding: 30px;
             border-radius: 16px;
             box-shadow: 0 8px 30px rgba(0, 0, 0, 0.1);
             width: 90%;
-            max-width: 400px;
+            max-width: 600px;
             box-sizing: border-box;
             text-align: center;
+            animation: fadeIn 0.8s ease-in-out;
+        }
+
+        @keyframes fadeIn {
+            from {
+                opacity: 0;
+                transform: translateY(20px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
         h1 {
-            font-size: 1.8rem;
+            font-size: 2.2rem;
             color: #1e3c72;
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         .upload-section {
             background: #f9f9f9;
-            padding: 15px;
+            padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
         }
 
         input[type="file"] {
-            padding: 8px;
+            padding: 10px;
             border: 2px dashed #1e3c72;
             background: #ffffff;
             border-radius: 8px;
-            font-size: 0.9rem;
+            font-size: 1rem;
             color: #1e3c72;
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
+            max-width: 500px;
         }
 
         input[type="file"]:hover {
@@ -63,10 +78,11 @@
 
         .preview-box {
             background: #f9f9f9;
-            padding: 15px;
+            padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
+            margin-bottom: 20px;
+            width: calc(100% - 40px);
             min-height: 100px;
             display: flex;
             justify-content: center;
@@ -76,42 +92,47 @@
 
         textarea {
             background: #f9f9f9;
-            padding: 15px;
+            padding: 20px;
             border-radius: 12px;
             box-shadow: 0 4px 10px rgba(0, 0, 0, 0.1);
-            margin-bottom: 15px;
-            width: 100%;
-            height: 120px;
-            font-size: 0.9rem;
+            margin-bottom: 20px;
+            width: calc(100% - 40px);
+            height: 150px;
+            font-size: 1rem;
             resize: none;
             color: #333;
+            overflow-y: auto;
         }
 
         .actions {
             display: flex;
-            flex-wrap: wrap;
+            justify-content: space-between;
             gap: 10px;
-            justify-content: center;
+            margin: 20px 0 30px;
         }
 
         button {
-            flex: 1 1 calc(50% - 10px);
             display: flex;
             align-items: center;
             justify-content: center;
-            gap: 8px;
-            padding: 10px;
+            gap: 10px;
+            padding: 12px 20px;
             border: none;
             border-radius: 8px;
             background-color: #1e3c72;
             color: #fff;
-            font-size: 0.9rem;
+            font-size: 1rem;
             cursor: pointer;
             transition: all 0.3s ease;
         }
 
         button:hover {
             background-color: #2a5298;
+            transform: scale(1.05);
+        }
+
+        button i {
+            font-size: 1.2rem;
         }
 
         #resetButton {
@@ -123,9 +144,9 @@
         }
 
         footer {
-            margin-top: 15px;
+            margin-top: 20px;
             text-align: center;
-            font-size: 0.8rem;
+            font-size: 0.9rem;
             color: #666;
         }
 
@@ -138,26 +159,6 @@
         footer a:hover {
             text-decoration: underline;
         }
-
-        /* Estilo Responsivo */
-        @media (max-width: 480px) {
-            h1 {
-                font-size: 1.5rem;
-            }
-
-            input[type="file"] {
-                font-size: 0.8rem;
-            }
-
-            button {
-                font-size: 0.8rem;
-                padding: 8px;
-            }
-
-            textarea {
-                height: 100px;
-            }
-        }
     </style>
 </head>
 <body>
@@ -166,14 +167,16 @@
         <div class="upload-section">
             <input type="file" id="fileInput" accept=".svg">
         </div>
-        <div class="preview-box" id="svgPreview">Aquí aparecerá la vista previa de tu SVG</div>
-        <div class="actions">
-            <button id="convertButton"><i class="fas fa-sync-alt"></i> Convertir</button>
-            <button id="copyButton"><i class="fas fa-copy"></i> Copiar</button>
-            <button id="downloadButton"><i class="fas fa-download"></i> Descargar</button>
-            <button id="resetButton"><i class="fas fa-trash-alt"></i> Reiniciar</button>
+        <div class="output-section">
+            <div class="preview-box" id="svgPreview">Aquí aparecerá la vista previa de tu SVG</div>
+            <div class="actions">
+                <button id="convertButton"><i class="fas fa-sync-alt"></i> Convertir</button>
+                <button id="copyButton"><i class="fas fa-copy"></i> Copiar</button>
+                <button id="downloadButton"><i class="fas fa-download"></i> Descargar</button>
+                <button id="resetButton"><i class="fas fa-trash-alt"></i> Reiniciar</button>
+            </div>
+            <textarea id="svgCode" rows="10" readonly></textarea>
         </div>
-        <textarea id="svgCode" rows="10" readonly></textarea>
     </div>
     <footer>
         Aplicación creada por <a href="#" target="_blank">Charlie Bérgamo</a>
