--- a/index.html
+++ b/index.html
@@ -68,7 +68,6 @@
             cursor: pointer;
             transition: all 0.3s ease;
             width: 100%;
-            max-width: 500px;
         }
 
         input[type="file"]:hover {
@@ -158,6 +157,64 @@
 
         footer a:hover {
             text-decoration: underline;
+        }
+
+        /* Responsivo para tablets */
+        @media (max-width: 768px) {
+            .container {
+                padding: 20px;
+                max-width: 500px;
+            }
+
+            h1 {
+                font-size: 1.8rem;
+            }
+
+            textarea {
+                height: 120px;
+            }
+
+            .actions {
+                flex-wrap: wrap;
+            }
+
+            button {
+                flex: 1 1 calc(50% - 10px);
+                font-size: 0.9rem;
+                padding: 10px;
+            }
+        }
+
+        /* Responsivo para celulares */
+        @media (max-width: 480px) {
+            .container {
+                padding: 15px;
+                max-width: 90%;
+            }
+
+            h1 {
+                font-size: 1.5rem;
+            }
+
+            textarea {
+                height: 100px;
+                font-size: 0.9rem;
+            }
+
+            .actions {
+                flex-wrap: wrap;
+            }
+
+            button {
+                flex: 1 1 100%;
+                margin-bottom: 10px;
+                padding: 8px;
+                font-size: 0.8rem;
+            }
+
+            footer {
+                font-size: 0.8rem;
+            }
         }
     </style>
 </head>
